--- a/app/src/main/res/layout/content_form_registration.xml
+++ b/app/src/main/res/layout/content_form_registration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/min_padding"
-    android:background="?attr/colorPrimary"
+    android:background="@color/colorWhite"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.RegistrationActivity"
     tools:showIn="@layout/activity_registration">
@@ -40,7 +40,8 @@
                     android:text="Silahkan Lengkapi Informasi Rental Anda"
                     android:textAlignment="center"
                     android:textColor="@color/colorBlack"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -77,7 +78,6 @@
                         android:id="@+id/reg_rent_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorNearWhite"
                         android:ems="10"
                         android:imeOptions="actionNext"
                         android:inputType="text|textCapWords"
@@ -98,17 +98,18 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/xmin_padding"
-                        android:text="Pemilik / Penanggungjawab Rental" />
+                        android:text="Pemilik Rental" />
 
                     <EditText
                         android:id="@+id/reg_own_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorNearWhite"
                         android:ems="10"
                         android:imeOptions="actionNext"
                         android:inputType="text|textCapWords"
                         android:padding="@dimen/min_padding" />
+
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -125,11 +126,26 @@
                         android:layout_marginBottom="@dimen/xmin_padding"
                         android:text="Jenis Rental" />
 
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/xmin_padding"
-                        android:background="@color/colorNearWhite">
+                        android:orientation="vertical">
+
+                        <RadioButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Corporate"
+                            android:visibility="gone"
+                            />
+
+                        <RadioButton
+                            android:layout_marginLeft="50dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Personal"
+                            android:visibility="gone"
+                            />
 
                         <Spinner
                             android:id="@+id/reg_role"
@@ -138,7 +154,8 @@
                             android:entries="@array/role_rental"
                             android:fadingEdge="horizontal"
                             android:padding="@dimen/xmin_padding"
-                            app:layout_gravity="bottom" />
+                            app:layout_gravity="bottom"
+                            android:visibility="visible"/>
 
                         <View
                             android:id="@+id/line"
@@ -147,9 +164,10 @@
                             android:layout_alignBottom="@id/reg_role"
                             android:background="@android:color/darker_gray"
                             android:paddingLeft="@dimen/min_padding"
-                            android:paddingRight="@dimen/min_padding" />
+                            android:paddingRight="@dimen/min_padding"
+                            android:visibility="visible"/>
 
-                    </RelativeLayout>
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -176,12 +194,14 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             android:layout_centerInParent="false"
-                            android:background="@color/colorNearWhite"
                             android:ems="10"
                             android:hint="your_mail@mail.com"
                             android:imeOptions="actionNext"
                             android:inputType="textEmailAddress"
-                            android:padding="@dimen/min_padding" />
+                            android:paddingTop="@dimen/min_padding"
+                            android:paddingLeft="@dimen/min_padding"
+                            android:paddingRight="@dimen/min_padding"
+                            android:paddingBottom="20dp"/>
 
                         <ImageView
                             android:id="@+id/email_check"
@@ -191,7 +211,8 @@
                             android:layout_centerVertical="true"
                             android:layout_margin="@dimen/xmin_padding"
                             android:visibility="gone"
-                            app:srcCompat="@drawable/checkmarkgreen_sm25x25" />
+                            app:srcCompat="@drawable/ic_check_green" />
+
                     </RelativeLayout>
 
                 </LinearLayout>
@@ -220,24 +241,30 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_centerVertical="true"
+                            android:background="@color/colorGreenRe"
                             app:ccp_defaultNameCode="ID"
+                            app:ccpDialog_textColor="@color/colorBlack"
                             app:ccp_showFlag="false" />
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_toEndOf="@+id/country_code">
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_toEndOf="@+id/country_code"
+                            >
 
                             <EditText
                                 android:id="@+id/reg_phone"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:background="@color/colorNearWhite"
                                 android:ems="10"
                                 android:hint="8xxxxxxxxxx"
                                 android:imeOptions="actionNext"
                                 android:inputType="phone"
-                                android:padding="@dimen/min_padding" />
+                                android:paddingLeft="@dimen/min_padding"
+                                android:paddingRight="@dimen/min_padding"
+                                android:paddingTop="@dimen/min_padding" />
 
                             <ImageView
                                 android:id="@+id/phone_check"
@@ -247,8 +274,15 @@
                                 android:layout_centerVertical="true"
                                 android:layout_margin="@dimen/xmin_padding"
                                 android:visibility="gone"
-                                app:srcCompat="@drawable/checkmarkgreen_sm25x25" />
+                                app:srcCompat="@drawable/ic_check_green" />
+
+                            <View
+                                android:layout_width="1dp"
+                                android:layout_height="match_parent"
+                                android:background="@color/colorGrey" />
                         </RelativeLayout>
+
+
                     </RelativeLayout>
 
                 </LinearLayout>
@@ -271,7 +305,6 @@
                         android:id="@+id/reg_pass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorNearWhite"
                         android:ems="10"
                         android:hint="******"
                         android:imeOptions="actionNext"
@@ -297,7 +330,6 @@
                         android:id="@+id/reg_conf_pass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorNearWhite"
                         android:ems="10"
                         android:hint="******"
                         android:imeOptions="actionDone"
@@ -320,7 +352,7 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/xmin_padding"
                     android:text="Saya mengerti dengan Kententuan dan Kebijakan yang berlaku."
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorBlack"
                     android:textSize="10sp" />
 
             </LinearLayout>
@@ -329,10 +361,10 @@
                 android:id="@+id/btn_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorWhite"
+                android:background="@color/colorGreenRe"
                 android:padding="@dimen/xmin_padding"
                 android:text="Daftar"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorWhite"
                 android:textStyle="bold" />
 
             <TextView
@@ -344,8 +376,10 @@
                 android:padding="@dimen/xmin_padding"
                 android:text="@string/agreement_link"
                 android:textAlignment="center"
-                android:textColor="@color/colorWhite"
-                android:textSize="10sp" />
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                />
 
         </LinearLayout>
 
