--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="0dp"
         android:id="@+id/appBarLayout">
 
         <android.support.v7.widget.Toolbar
@@ -28,16 +27,25 @@
         android:layout_height="match_parent"
         android:padding="20dp">
 
+        <ImageView
+            android:id="@+id/forgotbanner"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:src="@drawable/forgot_pass"
+            android:layout_marginTop="60dp"/>
+
         <TextView
+            android:layout_below="@id/forgotbanner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/medium_text"
+            android:textSize="@dimen/small_text"
             android:text="@string/forgot_text"
             android:id="@+id/forgot_text"
             android:textAlignment="center"
-            android:layout_marginTop="60dp"/>
+            android:textStyle="bold"
+            android:layout_marginTop="20dp"/>
 
 
         <android.support.design.widget.TextInputLayout
@@ -57,6 +65,7 @@
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:textColor="@color/colorWhite"
+                android:textColorHint="@color/colorNearWhite"
                 android:textColorLink="@color/colorWhite"
                 />
 
@@ -67,10 +76,10 @@
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/radius_white"
+            android:background="@color/colorGreenRe"
             android:filterTouchesWhenObscured="false"
             android:text="KIRIM"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_below="@+id/forgot_text_layout"/>
