--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,4 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,13 +13,13 @@
     tools:context="id.rentist.mitrarentist.LoginActivity">
 
     <!-- Login progress -->
+
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="300dp"
-        android:layout_height="124dp"
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/xmin_padding"
-        android:src="@drawable/logo_white_500"
+        android:src="@drawable/logo_login"
         android:contentDescription="@string/app_name" />
 
     <ScrollView
@@ -34,18 +33,6 @@
             android:layout_height="wrap_content"
             android:focusableInTouchMode="true"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/loginText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="sans-serif"
-                android:gravity="center"
-                android:text="@string/login_text"
-                android:textColor="@android:color/white"
-                android:textSize="18sp" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -89,41 +76,73 @@
                 android:id="@+id/email_sign_in_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:background="@drawable/radius_white"
+                android:layout_marginTop="20dp"
+                android:background="@color/colorGreenRe"
                 android:filterTouchesWhenObscured="false"
                 android:text="@string/action_sign_in_short"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorWhite"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/forgotPassword"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:clickable="true"
-                android:fontFamily="sans-serif"
+                android:orientation="horizontal"
                 android:gravity="center"
-                android:text="@string/forgot_password"
-                android:textColor="@android:color/white"
-                android:textSize="14sp" />
+                android:layout_marginTop="20dp"
+                >
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:src="@drawable/ic_pass"
+                    android:layout_gravity="center"
+                    />
 
                 <TextView
-                    android:id="@+id/registerAccount"
-                    android:layout_width="match_parent"
+                    android:id="@+id/forgotPassword"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
                     android:fontFamily="sans-serif"
                     android:gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:padding="@dimen/xmin_padding"
-                    android:text="Tidak Memiliki Akun? Daftar di sini"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="14sp"
-                    android:background="@drawable/radius_white"
-                    />
+                    android:text="@string/forgot_password"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="10dp"/>
 
+            </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            >
+
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/icbtnlogin"
+                android:layout_gravity="center"
+                />
+
+            <TextView
+                android:id="@+id/registerAccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="Create Your Account"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
