--- a/app/src/main/res/layout/content_aktifasi.xml
+++ b/app/src/main/res/layout/content_aktifasi.xml
@@ -13,31 +13,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/breadcrumb_height"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:padding="20dp">
 
-        <TextView
-            android:id="@+id/resendCountdown"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/xmin_padding"
-            android:text=""
-            android:textAlignment="center"
-            android:textAllCaps="false"
-            android:textColor="@color/colorWhite"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="@dimen/min_padding"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:src="@drawable/activation_banner"/>
 
         <TextView
+            android:layout_marginTop="@dimen/min_padding"
             android:id="@+id/aktif_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/aktif_text"
             android:textAlignment="center"
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/medium_text" />
+            android:textSize="@dimen/large_text"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/resendCountdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/xmin_padding"
+            android:text="(60)"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:visibility="gone"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/aktif_text_layout"
@@ -51,7 +58,7 @@
                 android:id="@+id/aktif_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Kode Aktifasi"
+                android:hint="Kode Aktivasi"
                 android:imeActionId="@+id/aktif"
                 android:inputType="number"
                 android:maxLength="4"
@@ -69,50 +76,25 @@
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/radius_white"
+            android:background="@color/colorGreenRe"
             android:filterTouchesWhenObscured="false"
             android:text="AKTIVASI"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorWhite"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/med_padding"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
-            <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:orientation="horizontal"-->
-                <!--android:paddingBottom="@dimen/xmin_padding">-->
-
-                <!--<TextView-->
-                    <!--id-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:padding="@dimen/xmin_padding"-->
-                    <!--android:text="+628658446489"-->
-                    <!--android:textAlignment="center"-->
-                    <!--android:layout_weight="1"-->
-                    <!--android:textColor="@color/colorWhite" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:padding="@dimen/xmin_padding"-->
-                    <!--android:text="+628658446489"-->
-                    <!--android:textAlignment="center"-->
-                    <!--android:layout_weight="1"-->
-                    <!--android:textColor="@color/colorWhite" />-->
-            <!--</LinearLayout>-->
-
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/xmin_padding"
-                android:text="@string/activation_text_check"
+                android:text="Mohon periksa SMS dan email Anda untuk mendapatkan kode aktivasi"
                 android:textAlignment="center"
                 android:textColor="@color/colorWhite" />
 
@@ -127,7 +109,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/xmin_padding"
-                    android:text="Tidak Menerima Kode Aktifasi?"
+                    android:text="Tidak Menerima Kode Aktivasi?"
                     android:textAlignment="center"
                     android:textColor="@color/colorWhite" />
 
@@ -138,28 +120,30 @@
                 android:id="@+id/getNewCode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="false"
                 android:padding="@dimen/min_padding"
                 android:text="@string/resend_code"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@color/colorWhite"
                 android:textSize="18sp"
+                android:clickable="false"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/counterZero"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:padding="@dimen/xmin_padding"
-                android:text=""
+                android:text="Periksa email Anda jika tetap tidak mendapatkan SMS verifikasi"
+                android:layout_gravity="center_horizontal"
                 android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textColor="@color/roleSuperadmin"
+                android:textColor="@color/colorWhite"
                 android:textStyle="bold"
-                android:textSize="@dimen/under_small_text"
-                android:visibility="gone" />
+                android:textSize="@dimen/small_text"
+                android:visibility="gone"
+                android:background="@color/colorDanger"
+                />
         </LinearLayout>
 
     </LinearLayout>
