--- a/app/src/main/res/layout/content_trans_detail.xml
+++ b/app/src/main/res/layout/content_trans_detail.xml
@@ -196,15 +196,15 @@
 
                             </LinearLayout>
 
-                            <ImageButton
+                            <ImageView
                                 android:id="@+id/btn_camera"
                                 android:layout_width="@dimen/breadcrumb_height"
                                 android:layout_height="@dimen/breadcrumb_height"
                                 android:layout_alignParentEnd="true"
                                 android:layout_centerVertical="true"
                                 android:clickable="true"
-                                android:src="@drawable/ic_camera_alt_white_36dp"
-                                android:visibility="gone" />
+                                android:src="@drawable/ic_camera_alt_black_24dp"
+                                android:visibility="visible" />
 
                         </RelativeLayout>
 
@@ -283,11 +283,12 @@
                                     android:id="@+id/detTrans_picktime"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_toRightOf="@+id/picktime"
                                     android:text="07:00"
                                     android:textAlignment="textEnd"
                                     android:textSize="@dimen/under_small_text"
-                                    android:textStyle="bold" />
+                                    android:textStyle="bold"
+                                    android:layout_alignParentTop="true"
+                                    android:layout_alignParentEnd="true" />
 
                             </RelativeLayout>
 
@@ -326,8 +327,8 @@
                                     android:id="@+id/detTrans_map"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_alignParentStart="true"
-                                    android:layout_alignParentTop="true" />
+                                    android:layout_alignParentTop="true"
+                                    android:layout_alignParentStart="true" />
 
                             </RelativeLayout>
 
