--- a/app/src/main/res/layout/onboard_2.xml
+++ b/app/src/main/res/layout/onboard_2.xml
@@ -1,44 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
+    android:orientation="vertical"
     android:padding="@dimen/med_padding">
+
+
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/min_padding"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/ss_3" />
 
     <TextView
         android:id="@+id/textView32"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="@dimen/xmin_padding"
-        android:layout_marginTop="@dimen/med_padding"
+        android:layout_marginTop="@dimen/min_padding"
         android:padding="@dimen/min_padding"
         android:text="@string/slide_3_title"
         android:textAlignment="center"
-        android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/large_text"
+        android:textSize="@dimen/xlarge_text"
         android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView16"
-        android:layout_alignWithParentIfMissing="false"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="@dimen/med_padding"
-        app:srcCompat="@drawable/ic_info_outline_white_48dp" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/fastscroll__bubble_size"
-        android:layout_marginTop="@dimen/xmin_padding"
         android:padding="@dimen/min_padding"
         android:text="@string/slide_3_desc"
         android:textAlignment="center"
@@ -46,4 +43,4 @@
         android:textColor="@android:color/white"
         android:textSize="@dimen/medium_text" />
 
-</RelativeLayout>
+</LinearLayout>
