--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,13 +17,14 @@
     <color name="colorBlack54">#757575</color>
     <color name="colorBlack87">#212121</color>
     <color name="colorButtonDefault">#e2e2e2</color>
-    <color name="colorDanger">#ff2828</color>
+    <color name="colorDanger">#E83A3B</color>
     <color name="colorPrice">#f19800</color>
     <color name="colorOrangeSoft">#f5ce8a</color>
     <color name="colorBackgound">#d6d6d6</color>
     <color name="colorBackgoundCard">#c4c4c4</color>
     <color name="backgoundLighter">#eeeeee</color>
     <color name="colorGreen">#54cf46</color>
+    <color name="colorGreenRe">#99E52C</color>
     <color name="colorGreenSoft">#9bd996</color>
     <color name="colorGreenLight">#99cc00</color>
     <color name="colorInactive">#ff5050</color>
