--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="btn_lmedium_height">50dp</dimen>
 
     <dimen name="large_text">22sp</dimen>
+    <dimen name="xlarge_text">28sp</dimen>
     <dimen name="medium_text">18sp</dimen>
     <dimen name="small_text">16sp</dimen>
     <dimen name="under_small_text">13sp</dimen>
