--- a/app/src/main/res/layout/content_detail_chat.xml
+++ b/app/src/main/res/layout/content_detail_chat.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_margin="@dimen/xmin_padding"
             android:id="@+id/linear_layout_message">
 
         </LinearLayout>
@@ -73,10 +74,10 @@
             <EditText
                 android:id="@+id/messageArea"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="@dimen/btn_thumb"
                 android:background="@android:color/white"
                 android:gravity="top"
-                android:hint="type message.."
+                android:hint="Tulis Pesan.."
                 android:padding="10dp" />
 
         </android.support.v7.widget.CardView>
@@ -86,7 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="@color/colorPrimaryDark"
-            app:srcCompat="@drawable/ic_send_black_24dp" />
+            app:srcCompat="@drawable/ic_send_white_24dp" />
 
     </LinearLayout>
 </LinearLayout>
